core - Ajustes